# impresario

./: .gitignore  README.md  check.py  pyproject.toml  tox.ini
src/impresario/: __main__.py  cli.py  config.py  service.py  song.py  theory.py
tests/: test_config.py  test_service.py  test_song.py  test_theory.py
