[tool.poetry]
name = "lego-songbook-manager"
version = "2019.12.0"
description = "Tools to easily manage Lego Songbook"
authors = ["Kip Yin <28321392+kipyin@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.2"
attrs = "^19.3"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
